# minim

./: .coverage  .coveragerc  .gitignore  .gitmodules  .readthedocs.yaml  README.md  environment.yaml  environment.yml  pyproject.toml  requirements.txt  requirements_minimal.txt
.github/workflows/: ci.yml
assets/gui/styles/: colors.yaml  template.qss
docs/: .buildinfo  api.html  genindex.html  guide.html  guides.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  start.html  user_guide.html
docs/.doctrees/: api.doctree  guide.doctree  guides.doctree  index.doctree  start.doctree  user_guide.doctree
docs/.doctrees/api/: minim.audio.Audio.doctree  minim.audio.FLACAudio.doctree  minim.audio.MP3Audio.doctree  minim.audio.MP4Audio.doctree  minim.audio.doctree  (+49 more)
docs/_modules/: index.html
docs/_sources/: api.rst.txt  guide.rst.txt  guides.rst.txt  index.rst.txt  start.rst.txt  user_guide.rst.txt
docs/api/: minim.audio.Audio.html  minim.audio.FLACAudio.html  minim.audio.MP3Audio.html  minim.audio.MP4Audio.html  minim.audio.OGGAudio.html  minim.audio.WAVEAudio.html  minim.audio.html  minim.discogs.API.html  minim.discogs.html  minim.html  minim.itunes.SearchAPI.html  minim.itunes.html  minim.itunes.lookup.html  minim.itunes.search.html  minim.qobuz.Album.html  minim.qobuz.Artist.html  minim.qobuz.Label.html  minim.qobuz.Playlist.html  minim.qobuz.PrivateAPI.html  minim.qobuz.Session.html  minim.qobuz.Track.html  minim.qobuz.User.html  minim.qobuz.html  minim.spotify.Album.html  minim.spotify.Artist.html  minim.spotify.Audiobook.html  minim.spotify.Category.html  minim.spotify.Chapter.html  minim.spotify.Episode.html  minim.spotify.Lyrics.html  minim.spotify.LyricsAPISession.html  minim.spotify.LyricsService.html  minim.spotify.Market.html  minim.spotify.Player.html  minim.spotify.Playlist.html  minim.spotify.PrivateLyricsService.html  minim.spotify.Show.html  minim.spotify.Track.html  minim.spotify.User.html  minim.spotify.WebAPI.html  (+13 more)
docs/notebooks/: getting_started.html  start.html
docs/source/: api.rst  conf.py  guides.rst  index.rst
gui/: launch.py
gui/styles/: colors.yaml  template.qss
src/minim/: __init__.py  _types.py  _utility.py  audio.py  discogs.py  itunes.py  qobuz.py  spotify.py  tidal.py  utility.py
tests/: test_audio.py  test_discogs.py  test_itunes.py  test_qobuz.py  test_spotify.py  test_tidal.py
tests/data/: middle_c_aac.m4a  middle_c_alac.m4a
(+232 files in other folders)
