[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "minim"
version = "2.0.0"
authors = [
  { name = "Benjamin Ye", email = "benjaminbobinye@gmail.com" }
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "httpx"
]
description = """
A collection of music service APIs to query media information and 
media file readers and writers to (semi-)automate tagging.
"""
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest-cov",
  "pytest-playwright",
  "ruff"
]
docs = [
  "sphinx"
]

[project.urls]
"Homepage" = "https://github.com/bbye98/minim"
"Bug Tracker" = "https://github.com/bbye98/minim/issues"

[tool.ruff]
target-version = "py310"